# frost

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  e2e.yml  release.yml
config/: frost.example.toml
crates/frost-cli/: Cargo.toml
crates/frost-cli/src/: main.rs
crates/frost-core/: Cargo.toml
crates/frost-core/src/: catalog.rs  config.rs  cost.rs  engine.rs  fix.rs  fleet.rs  lib.rs  metadata.rs  object_store.rs  report.rs  test_helpers.rs  watch.rs
crates/frost-core/src/catalog/: glue.rs  mod.rs  rest.rs
crates/frost-core/src/checks/: branch_health.rs  delete_pressure.rs  format_v1.rs  freshness.rs  metadata_size.rs  mod.rs  orphan_files.rs  partition_skew.rs  partition_spec_evolution.rs  properties_drift.rs  schema_history.rs  small_files.rs  snapshot_bloat.rs  sort_compliance.rs  sort_order.rs  stats_coverage.rs
crates/frost-core/src/parse/: fixtures.rs  manifest.rs  metadata_json.rs  mod.rs
crates/frost-core/tests/: catalog_tests.rs  fixture_helpers.rs  watch_tests.rs
crates/frost-mcp/: Cargo.toml
crates/frost-mcp/src/: lib.rs  main.rs  server.rs  tools.rs
crates/frost-mcp/tests/: fixture_helpers.rs  tool_tests.rs
sandbox/: docker-compose.yml  generate_pathologies.py
tests/fixtures/: README.md
