[workspace]
resolver = "2"
members = ["crates/frost-core", "crates/frost-cli", "crates/frost-mcp"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/aidancorrell/frost"
homepage = "https://github.com/aidancorrell/frost"

[workspace.dependencies]
frost-core = { path = "crates/frost-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release-lto]
inherits = "release"
lto = "thin"
codegen-units = 1
strip = "symbols"
