[package]
name = "frost-mcp"
description = "MCP server for frost — agent-first Iceberg table health tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
frost-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
