[package]
name = "frost-mcp"
description = "MCP server for frost — agent-first Iceberg table health tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "frost-mcp"
path = "src/main.rs"

[dependencies]
frost-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "1.4", features = ["server", "transport-io"] }
schemars = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
apache-avro = "0.21"
chrono = { workspace = true }

